--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
@@ -157,7 +158,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.10",
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
     "react": "16.4.1",
