--- a/package.json
+++ b/package.json
@@ -165,13 +165,14 @@
     "react-dnd": "^5.0.0",
     "react-dom": "16.4.1",
     "react-helmet": "^5.2.0",
+    "react-image": "^1.5.1",
     "react-intl": "2.4.0",
     "react-loadable": "5.4.0",
     "react-overflow-scrolling": "^0.1.5",
-    "react-parallax": "^2.0.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-scroll-parallax": "^1.3.5",
     "redux": "4.0.0",
     "redux-form": "^7.4.2",
     "redux-immutable": "4.0.0",
