--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "react-animations": "^1.0.0",
     "react-dom": "16.6.0",
     "react-helmet": "5.2.0",
-    "react-image": "^1.5.1",
     "react-intl": "2.7.2",
     "react-loadable": "^5.5.0",
     "react-redux": "5.0.7",
@@ -148,7 +147,7 @@
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.4.0",
+    "image-webpack-loader": "^4.6.0",
     "imports-loader": "0.8.0",
     "jest-cli": "23.6.0",
     "jest-styled-components": "6.2.2",
@@ -169,6 +168,7 @@
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
+    "svg-inline-loader": "^0.8.0",
     "svg-url-loader": "2.3.2",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.2",
