--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-redux-saga": "0.9.0",
     "file-loader": "2.0.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "^4.6.0",
