--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-redux-saga": "0.9.0",
-    "file-loader": "2.0.0",
+    "file-loader": "^2.0.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
