--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react": "16.6.0",
     "react-animations": "^1.0.0",
     "react-dom": "16.6.0",
+    "react-dropzone": "^8.0.3",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
     "react-loadable": "^5.5.0",
