--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "redux-act": "^1.7.4",
     "redux-form": "^7.4.2",
     "redux-immutable": "4.0.0",
+    "redux-router": "^2.1.2",
     "redux-saga": "0.16.2",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
