home page relayout

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-animations": "^1.0.0",
+    "react-device-detect": "^1.6.2",
     "react-dom": "16.6.0",
     "react-dropzone": "^8.0.3",
     "react-helmet": "5.2.0",
